cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
project(Tap)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include("${CMAKE_SOURCE_DIR}/cmake/FindSDL2.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/FindSDLU.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/FindSDL2_ttf.cmake")
include("${CMAKE_SOURCE_DIR}/cmake/FindSDL2_mixer.cmake")

option(PORTABLE "Save scores and settings in the same folder as the executable" OFF)
option(STANDALONE "Load assets from current directory and not source directory" ON)
if (APPLE)
  option(MACOSX_BUNDLE "Build Shapes.app" ON)
endif(APPLE)

find_package(SDL2 REQUIRED)
find_package(SDLU REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
include_directories(${SDL2_INCLUDE_DIR} ${SDLU_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR})
link_libraries(${SDL2MAIN_LIBRARY} ${SDL2_LIBRARY} ${SDLU_LIBRARY} ${SDL2_MIXER_LIBRARY} ${SDL2_TTF_LIBRARY})

file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*)
file(GLOB BMPASSETS ${CMAKE_SOURCE_DIR}/assets/*.bmp)
file(GLOB WAVASSETS ${CMAKE_SOURCE_DIR}/assets/*.wav)

 source_group(assets FILES ${BMPASSETS} ${WAVASSETS})

if (PORTABLE)
  add_definitions("-DPORTABLE")
endif(PORTABLE)

if (WIN32)
  add_executable(Tap WIN32 ${SOURCES} ${BMPASSETS} ${WAVASSETS})
  if (NOT STANDALONE)
	add_definitions("-DASSETSDIR=\"${CMAKE_SOURCE_DIR}/assets/\"")
  endif()
  install(TARGETS Tap DESTINATION ${CMAKE_INSTALL_PREFIX})
  install(FILES ${BMPASSETS} ${WAVASSETS} DESTINATION ${CMAKE_INSTALL_PREFIX}/assets)
elseif (APPLE AND MACOSX_BUNDLE)
  add_executable(Tap MACOSX_BUNDLE ${SOURCES} ${BMPASSETS} ${WAVASSETS})
  set_source_files_properties(${BMPASSETS} ${WAVASSETS} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
  install(TARGETS Tap DESTINATION /Applications)
else()
  add_executable(Tap ${SOURCES}${WAVASSETS} ${BMPASSETS})
  add_definitions("-DASSETSDIR=\"${CMAKE_INSTALL_PREFIX}/share/tap/assets\"")
  install(TARGETS Tap DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
  install(FILES ${BMPASSETS} ${WAVASSETS} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/tap)
endif()
